crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__alias.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        AliasAssign(
            AliasAssign {
                name: "foo",
                pipeline: Pipeline(
                    [
                        Command {
                            name: "echo",
                            args: [
                                String(
                                    "hi",
                                ),
                            ],
                        },
                        Command {
                            name: "cat",
                            args: [],
                        },
                    ],
                ),
            },
        ),
    ],
    symbols: {},
}
