crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__assignments.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Assign(
            Assign {
                name: Ident(
                    "x",
                ),
                expr: Infix(
                    InfixExpr {
                        lhs: Number(
                            11.0,
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Add,
                    },
                ),
                global: false,
            },
        ),
    ],
}
