crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__break_and_continue.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        While(
            While {
                condition: Infix(
                    InfixExpr {
                        lhs: Ident(
                            Ident(
                                "x",
                            ),
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Eq,
                    },
                ),
                body: [
                    Break,
                    Continue,
                ],
            },
        ),
    ],
}
