crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__comparisons.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Expr(
            Infix(
                InfixExpr {
                    lhs: Number(
                        1.0,
                    ),
                    rhs: Number(
                        2.0,
                    ),
                    op: Lt,
                },
            ),
        ),
        Expr(
            Infix(
                InfixExpr {
                    lhs: Number(
                        1.0,
                    ),
                    rhs: Number(
                        2.0,
                    ),
                    op: Gt,
                },
            ),
        ),
        Expr(
            Infix(
                InfixExpr {
                    lhs: Number(
                        1.0,
                    ),
                    rhs: Number(
                        2.0,
                    ),
                    op: Le,
                },
            ),
        ),
        Expr(
            Infix(
                InfixExpr {
                    lhs: Number(
                        1.0,
                    ),
                    rhs: Number(
                        2.0,
                    ),
                    op: Ge,
                },
            ),
        ),
        Expr(
            Infix(
                InfixExpr {
                    lhs: Number(
                        1.0,
                    ),
                    rhs: Number(
                        2.0,
                    ),
                    op: Eq,
                },
            ),
        ),
        Expr(
            Infix(
                InfixExpr {
                    lhs: Number(
                        1.0,
                    ),
                    rhs: Number(
                        2.0,
                    ),
                    op: Ne,
                },
            ),
        ),
    ],
}
